CSS style for dark mode added to make codeblocks lighter; Structure finalized; Many new page additions

--- a/layouts/partials/head/stylesheet.html
+++ b/layouts/partials/head/stylesheet.html
@@ -8,4 +8,5 @@
   {{ $secureCSS := $css | resources.Fingerprint "sha512" -}}
   <link rel="stylesheet" href="{{ $secureCSS.Permalink }}" crossorigin="anonymous">
 {{ end -}}
+<link rel="stylesheet" href="/css/custom.css" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
