--- a/assets/scss/common/_variables-custom.scss
+++ b/assets/scss/common/_variables-custom.scss
@@ -1,2 +1,1 @@
-// Custom variables for Green Coding Solutions documentation
-// Add any custom SCSS variables here that override the defaults
+// Put your custom SCSS variables here
