--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,11 +2,11 @@
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
+      <h1>{{ .Title }}</h1>
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.doks.docsVersioning }}{{ .Site.Params.doks.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
       <p class="meta">Open-source AGPLv3 Licensed. <a href="https://github.com/green-coding-solutions/green-metrics-tool">GitHub</a></p>
     </div>
   </div>
@@ -14,12 +14,12 @@
 {{ end }}
 
 {{ define "sidebar-prefooter" }}
-<section class="section section-sm">
+<section class="section section-sm section-features">
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
         <h2 class="h4">Containerized approach</h2>
-        <p></a>Measurements on container level by default.</p>
+        <p>Measurements on container level by default.</p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Distributed Measurement</h2>
