Removed yellow primary color which was only for testing

--- a/assets/scss/common/_variables-custom.scss
+++ b/assets/scss/common/_variables-custom.scss
@@ -1,9 +1,10 @@
 /** Custom variables */
 
 // Light mode
-$primary: yellow;
+// example:
+// $primary: yellow;
 
-
+// dark mode postfixed with dark
 $body-bg-dark: #212529;
 
     .navbar,
